--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   url_launcher: ^6.3.1
   dots_indicator: ^3.0.0
   percent_indicator: ^4.2.4
-
+  gestures: ^1.0.0
+  lottie:
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,6 +66,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/onboarding/
+    - assets/images/home/
+    - assets/icons/home/
+    - assets/icons/workouts/
+    - assets/videos/workouts/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
